Remove test task, not required